feat: Add ability to detect files that don't exist in the train folder but are in the csv

--- a/trocr/Fine_tune_TrOCR.ipynb
+++ b/trocr/Fine_tune_TrOCR.ipynb
@@ -722,67 +722,6 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "pkSzlRJq68tH",
-    "ExecuteTime": {
-     "end_time": "2024-02-20T16:32:53.162224600Z",
-     "start_time": "2024-02-20T16:32:48.746955700Z"
-    }
-   },
-   "source": [
-    "!poetry add transformers"
-   ],
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The following packages are already present in the pyproject.toml and will be skipped:\n",
-      "\n",
-      "  • transformers\n",
-      "\n",
-      "If you want to update it to the latest compatible version, you can use `poetry update package`.\n",
-      "If you prefer to upgrade it to the latest available version, you can use `poetry add package@latest`.\n",
-      "\n",
-      "Nothing to add.\n"
-     ]
-    }
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "a8eZ6PWTHriw",
-    "ExecuteTime": {
-     "end_time": "2024-02-20T16:32:56.289381600Z",
-     "start_time": "2024-02-20T16:32:53.162224600Z"
-    }
-   },
-   "source": [
-    "!poetry add datasets jiwer"
-   ],
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The following packages are already present in the pyproject.toml and will be skipped:\n",
-      "\n",
-      "  • datasets\n",
-      "  • jiwer\n",
-      "\n",
-      "If you want to update it to the latest compatible version, you can use `poetry update package`.\n",
-      "If you prefer to upgrade it to the latest available version, you can use `poetry add package@latest`.\n",
-      "\n",
-      "Nothing to add.\n"
-     ]
-    }
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 204
@@ -790,30 +729,83 @@
     "id": "KkHqJw-W9Abl",
     "outputId": "bb86ef54-2407-49f8-8859-106a9d733046",
     "ExecuteTime": {
-     "end_time": "2024-02-20T16:33:00.410642900Z",
-     "start_time": "2024-02-20T16:32:56.292372600Z"
+     "end_time": "2024-02-29T05:32:30.378011100Z",
+     "start_time": "2024-02-29T05:32:16.860893800Z"
     }
    },
    "source": [
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "\n",
-    "df = pd.read_csv('./tibetan-dataset/labels_new.csv', sep=',', header=None)\n",
-    "df.rename(columns={0: \"file_name\", 1: \"text\"}, inplace=True)\n",
+    "# get all the file names\n",
+    "file_paths = [file_path for file_path in list(Path('./tibetan-dataset/transcript/').iterdir()) if file_path.suffix == '.csv']\n",
+    "\n",
+    "dfs = []\n",
+    "\n",
+    "for file_path in file_paths:\n",
+    "    batch_name = file_path.name.removesuffix('.csv')\n",
+    "    df = pd.read_csv(str(file_path), sep=',')\n",
+    "    df['batch_name'] = batch_name\n",
+    "    dfs.append(df)\n",
+    "    \n",
+    "df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "# change the column name line_image_id to file_name\n",
+    "df.rename(columns={'line_image_id': 'file_name'}, inplace=True)\n",
+    "\n",
     "# some file names end with jp instead of jpg, let's fix this\n",
     "df.head()"
    ],
-   "execution_count": 3,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
-      "text/plain": "                  file_name                                               text\n0                 ImageName                                               Text\n1  1-1-100a_line_9874_0.jpg  །གསལ་དང་འཛིན་འཇུག་དང༌། །སློབ་དང་སློབ་འཇུག་རྣམ་...\n2  1-1-100a_line_9874_1.jpg  འཆའ་འཆར་གཞུག་ལྟུང་བ་ཤེས། །ལྷོ་ཡི་རི་ལ་རྒྱུ་བ་ཡ...\n3  1-1-100a_line_9874_2.jpg  མ་ལོན་པའོ། །སངས་རྒྱས་བཅོམ་ལྡན་འདས་མཉན་ཡོད་ན་རྒ...\n4  1-1-100a_line_9874_3.jpg  བ་མི་མཁས་པ་ཞིག་གིས་གཞན་མུ་སྟེགས་ཅན་ཞིག་རབ་ཏུ་ཕ...",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>file_name</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ImageName</td>\n      <td>Text</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1-1-100a_line_9874_0.jpg</td>\n      <td>།གསལ་དང་འཛིན་འཇུག་དང༌། །སློབ་དང་སློབ་འཇུག་རྣམ་...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1-1-100a_line_9874_1.jpg</td>\n      <td>འཆའ་འཆར་གཞུག་ལྟུང་བ་ཤེས། །ལྷོ་ཡི་རི་ལ་རྒྱུ་བ་ཡ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1-1-100a_line_9874_2.jpg</td>\n      <td>མ་ལོན་པའོ། །སངས་རྒྱས་བཅོམ་ལྡན་འདས་མཉན་ཡོད་ན་རྒ...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1-1-100a_line_9874_3.jpg</td>\n      <td>བ་མི་མཁས་པ་ཞིག་གིས་གཞན་མུ་སྟེགས་ཅན་ཞིག་རབ་ཏུ་ཕ...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                               source           file_name  repo_name  \\\n0  W3CN4687/I3CN4689/I3CN46890004.jpg  I3CN46890004_0.jpg  I9655F3A0   \n1  W3CN4687/I3CN4689/I3CN46890016.tif  I3CN46890016_0.tif  I9655F3A0   \n2  W3CN4687/I3CN4689/I3CN46890016.tif  I3CN46890016_1.tif  I9655F3A0   \n3  W3CN4687/I3CN4689/I3CN46890016.tif  I3CN46890016_2.tif  I9655F3A0   \n4  W3CN4687/I3CN4689/I3CN46890016.tif  I3CN46890016_3.tif  I9655F3A0   \n\n                                                text batch_name  \n0               ཆོས་རྗེ་དམ་པ་ཡིད་བཞིན་ནོར་བུ་ལ་ན་མོ།    batch_1  \n1  བའི་མེ་ལོང་ལས། སྤུ་དེ་གུང་རྒྱལ་དང་རུ་ལས་སྐྱེས་...    batch_1  \n2  དུས་སུ་ཞང་ཞུང་གི་ཡུལ་ནས་བོན་བསྒྱུར་བར་བཤད་པས་ད...    batch_1  \n3  སྔོན་བོད་ལ་ཡི་གེ་ཡོད་པར་གྲུབ་ཅེས་སྨྲའོ། །དེའི་...    batch_1  \n4  སྐད་དུ་བསྒྱུར་ཏེ་ངག་སྒྲོས་ལ་དར་བ་ལས་བོད་ཀྱི་ཡི...    batch_1  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>source</th>\n      <th>file_name</th>\n      <th>repo_name</th>\n      <th>text</th>\n      <th>batch_name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>W3CN4687/I3CN4689/I3CN46890004.jpg</td>\n      <td>I3CN46890004_0.jpg</td>\n      <td>I9655F3A0</td>\n      <td>ཆོས་རྗེ་དམ་པ་ཡིད་བཞིན་ནོར་བུ་ལ་ན་མོ།</td>\n      <td>batch_1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>W3CN4687/I3CN4689/I3CN46890016.tif</td>\n      <td>I3CN46890016_0.tif</td>\n      <td>I9655F3A0</td>\n      <td>བའི་མེ་ལོང་ལས། སྤུ་དེ་གུང་རྒྱལ་དང་རུ་ལས་སྐྱེས་...</td>\n      <td>batch_1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>W3CN4687/I3CN4689/I3CN46890016.tif</td>\n      <td>I3CN46890016_1.tif</td>\n      <td>I9655F3A0</td>\n      <td>དུས་སུ་ཞང་ཞུང་གི་ཡུལ་ནས་བོན་བསྒྱུར་བར་བཤད་པས་ད...</td>\n      <td>batch_1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>W3CN4687/I3CN4689/I3CN46890016.tif</td>\n      <td>I3CN46890016_2.tif</td>\n      <td>I9655F3A0</td>\n      <td>སྔོན་བོད་ལ་ཡི་གེ་ཡོད་པར་གྲུབ་ཅེས་སྨྲའོ། །དེའི་...</td>\n      <td>batch_1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>W3CN4687/I3CN4689/I3CN46890016.tif</td>\n      <td>I3CN46890016_3.tif</td>\n      <td>I9655F3A0</td>\n      <td>སྐད་དུ་བསྒྱུར་ཏེ་ངག་སྒྲོས་ལ་དར་བ་ལས་བོད་ཀྱི་ཡི...</td>\n      <td>batch_1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Run the below cell and if there are any file names that don't exist in the folder, it will print the file name. It's recommended to remove the rows that has the file name that doesn't exist in the folder. You can do this by uncommenting the last line in the below cell."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# check if all the file names are in the folder and add batch_name to the file_name\n",
+    "import os\n",
+    "for row in df.iterrows():\n",
+    "    file_name = row[1]['file_name']\n",
+    "    batch_name = row[1]['batch_name']\n",
+    "    if not os.path.isfile('./tibetan-dataset/train/' + batch_name + '/' + file_name):\n",
+    "        print(file_name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# remove the rows that has the file name that doesn't exist in the folder\n",
+    "# df = df[os.path.isfile('./tibetan-dataset/train/' + df['batch_name'] + '/' + df['file_name'])]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -846,68 +838,6 @@
     "ExecuteTime": {
      "end_time": "2024-02-20T16:33:00.765735800Z",
      "start_time": "2024-02-20T16:33:00.410642900Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "# # delete all the files that are not in file_name anymore\n",
-    "# import os\n",
-    "# for file_name in os.listdir('./tibetan-dataset/train/'):\n",
-    "#     if file_name not in df['file_name'].values:\n",
-    "#         os.remove('./tibetan-dataset/train/' + file_name)\n",
-    "#         print(file_name)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-20T16:33:00.767730500Z",
-     "start_time": "2024-02-20T16:33:00.628086800Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "# # modify the csv file to only contain the file names that are still in the folder\n",
-    "# list_to_delete = \"20-1-59b_line_9874_3.jpg,20-1-59b_line_9874_4.jpg,20-1-59b_line_9874_5.jpg,20-1-59b_line_9874_6.jpg,20-1-5a_line_9874_0.jpg,20-1-5a_line_9874_2.jpg,20-1-5a_line_9874_3.jpg,20-1-5a_line_9874_4.jpg,20-1-5a_line_9874_5.jpg,20-1-5a_line_9874_6.jpg,20-1-5b_line_9874_1.jpg,96-1-329b_line_9874_4.jpg,96-1-32a_line_9874_0.jpg,96-1-32a_line_9874_1.jpg,96-1-32a_line_9874_3.jpg,96-1-32a_line_9874_4.jpg,96-1-32a_line_9874_5.jpg,96-1-32a_line_9874_6.jpg\".split(',')\n",
-    "# \n",
-    "# for file_name in list_to_delete:\n",
-    "#     df = df[df['file_name'] != file_name]\n",
-    "# # modify the csv file\n",
-    "# df.to_csv('./tibetan-dataset/labels_new.csv', header=False, index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-20T16:33:00.767730500Z",
-     "start_time": "2024-02-20T16:33:00.645041600Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "# from PIL import Image\n",
-    "# for i in df['file_name']:\n",
-    "#     try:\n",
-    "#         Image.open('./tibetan-dataset/train/' + i).convert(\"RGB\")\n",
-    "#     except Exception as ex:\n",
-    "#         print(i)\n",
-    "#         print(ex)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-20T16:33:00.769722500Z",
-     "start_time": "2024-02-20T16:33:00.658010800Z"
     }
    }
   },
@@ -978,9 +908,10 @@
     "    def __getitem__(self, idx):\n",
     "        # get file name + text \n",
     "        file_name = self.df['file_name'][idx]\n",
+    "        folder_name = self.df['batch_name'][idx] + '/'\n",
     "        text = self.df['text'][idx]\n",
     "        # prepare image (i.e. resize + normalize)\n",
-    "        image = Image.open(self.root_dir + file_name).convert(\"RGB\")\n",
+    "        image = Image.open(self.root_dir + folder_name + file_name).convert(\"RGB\")\n",
     "        pixel_values = self.processor(image, return_tensors=\"pt\").pixel_values\n",
     "        # add labels (input_ids) by encoding the text\n",
     "        labels = self.processor.tokenizer(text, \n",
@@ -1189,26 +1120,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [
-    "# for i in train_df['file_name']:\n",
-    "#     try:\n",
-    "#         Image.open(train_dataset.root_dir + i).convert(\"RGB\")\n",
-    "#     except Exception as ex:\n",
-    "#         print(i)\n",
-    "#         print(ex)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-20T16:33:15.797924800Z",
-     "start_time": "2024-02-20T16:33:15.764012200Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1236,30 +1147,6 @@
      ]
     }
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [],
-   "source": [
-    "# from all the file names find out which ones don't exist in train folder\n",
-    "# import os\n",
-    "# my_list = os.listdir('./tibetan-dataset/train/')\n",
-    "# for i, file_name in enumerate(df['file_name']):\n",
-    "#     if file_name not in my_list:\n",
-    "#         print(file_name)\n",
-    "#     else:\n",
-    "#         # use index to remove the file name from my_list\n",
-    "#         my_list.remove(file_name)\n",
-    "#         print(len(my_list))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-20T16:33:16.128429300Z",
-     "start_time": "2024-02-20T16:33:15.822860800Z"
-    }
-   }
   },
   {
    "cell_type": "markdown",
