updated the script

--- a/trocr/Fine_tune_TrOCR.ipynb
+++ b/trocr/Fine_tune_TrOCR.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -21,14 +21,27 @@
     "id": "KkHqJw-W9Abl",
     "outputId": "bb86ef54-2407-49f8-8859-106a9d733046"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'tibetan-dataset/transcript'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnotebook\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# get all the file names\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m file_paths \u001b[38;5;241m=\u001b[39m [file_path \u001b[38;5;28;01mfor\u001b[39;00m file_path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m./tibetan-dataset/transcript/\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miterdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m file_path\u001b[38;5;241m.\u001b[39msuffix \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      8\u001b[0m dfs \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_path \u001b[38;5;129;01min\u001b[39;00m tqdm(file_paths):\n",
+      "File \u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/pathlib.py:1150\u001b[0m, in \u001b[0;36mPath.iterdir\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1146\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21miterdir\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m   1147\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Iterate over the files in this directory.  Does not yield any\u001b[39;00m\n\u001b[1;32m   1148\u001b[0m \u001b[38;5;124;03m    result for the special paths '.' and '..'.\u001b[39;00m\n\u001b[1;32m   1149\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1150\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_accessor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m:\n\u001b[1;32m   1151\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m}:\n\u001b[1;32m   1152\u001b[0m             \u001b[38;5;66;03m# Yielding a path object for these makes little sense\u001b[39;00m\n\u001b[1;32m   1153\u001b[0m             \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'tibetan-dataset/transcript'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "# get all the file names\n",
-    "file_paths = [file_path for file_path in list(Path('./tibetan-dataset/transcript/').iterdir()) if file_path.suffix == '.csv']\n",
+    "file_paths = [file_path for file_path in list(Path('./tibetan-dataset/LhasaKanjur/transcript/').iterdir()) if file_path.suffix == '.csv']\n",
     "\n",
     "dfs = []\n",
     "\n",
@@ -48,94 +61,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from tqdm.notebook import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = []\n",
+    "file_path = Path(f\"./trocr/tibetan-dataset/train_uni.csv\")\n",
+    "train_df = pd.read_csv(str(file_path), sep=',')\n",
+    "train_df = pd.concat(dfs, ignore_index=True)\n",
+    "# change the column name line_image_id to file_name\n",
+    "train_df.rename(columns={'line_image_id': 'file_name'}, inplace=True)\n",
+    "# some file names end with jp instead of jpg, let's fix this\n",
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = []\n",
+    "file_path = Path(f\"./trocr/tibetan-dataset/eval_uni.csv\")\n",
+    "eval_df = pd.read_csv(str(file_path), sep=',')\n",
+    "eval_df = pd.concat(dfs, ignore_index=True)\n",
+    "# change the column name line_image_id to file_name\n",
+    "eval_df.rename(columns={'line_image_id': 'file_name'}, inplace=True)\n",
+    "# some file names end with jp instead of jpg, let's fix this\n",
+    "eval_df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
    "source": [
     "Run the below cell and if there are any file names that don't exist in the folder, it will print the file name. It's recommended to remove the rows that has the file name that doesn't exist in the folder. You can do this by uncommenting the last line in the below cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# check if all the file names are in the folder and add batch_name to the file_name\n",
-    "# I'm optimizing this code by saving the original image name and checking the next original image name is the same as the previous one. If it's the same, then we don't need to check if the file exists in the folder. If it's different, then we need to check if the file exists in the folder.\n",
-    "import os\n",
-    "from tqdm.notebook import tqdm\n",
-    "original_image_name = ''\n",
-    "thumbs_up = True\n",
-    "potential_missing_files = []\n",
-    "print('started')\n",
-    "for row in tqdm(df.iterrows(), total=df.shape[0]):\n",
-    "    file_name = row[1]['file_name']\n",
-    "    this_original_image_name = file_name.split('_')[0]\n",
-    "    if this_original_image_name != original_image_name:\n",
-    "        original_image_name = this_original_image_name\n",
-    "        batch_name = row[1]['batch_name']\n",
-    "        if not os.path.isfile('./tibetan-dataset/train/' + batch_name + '/' + file_name):\n",
-    "            thumbs_up = False\n",
-    "            potential_missing_files.append(file_name)\n",
-    "        else:\n",
-    "            thumbs_up = True\n",
-    "    else:\n",
-    "        if not thumbs_up:\n",
-    "            potential_missing_files.append(file_name)\n",
-    "            \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "potential_missing_files"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# remove the rows that has the file name that doesn't exist in the folder\n",
-    "# df = df[~df['file_name'].isin(potential_missing_files)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-01T04:19:43.617828400Z",
-     "start_time": "2024-03-01T04:19:43.481827900Z"
-    },
-    "id": "qJlVYVal9Ojy"
-   },
-   "source": [
-    "We split up the data into training + testing, using sklearn's `train_test_split` function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# check if a specific file name exists in df['file_name']\n",
-    "df['file_name'].str.contains('20-1-59b_line_9874_3.jpg').any()"
    ]
   },
   {
@@ -694,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
